--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-kubernetes-controller</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
         <type>jar</type>
       </dependency>
 
