--- a/pom.xml
+++ b/pom.xml
@@ -32,47 +32,9 @@
   <dependencyManagement>
     <dependencies>
 
-      <dependency>
-        <groupId>io.fabric8</groupId>
-        <artifactId>kubernetes-client</artifactId>
-        <version>3.1.8</version>
-        <type>jar</type>
-      </dependency>
 
-      <dependency>
-        <groupId>javax.annotation</groupId>
-        <artifactId>javax.annotation-api</artifactId>
-        <version>1.3</version>
-        <type>jar</type>
-      </dependency>
+      <!-- Imports. -->
 
-      <dependency>
-        <groupId>javax.el</groupId>
-        <artifactId>javax.el-api</artifactId>
-        <version>3.0.1-b04</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
-        <groupId>javax.enterprise</groupId>
-        <artifactId>cdi-api</artifactId>
-        <version>2.0</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>org.glassfish</groupId>
-        <artifactId>javax.el</artifactId>
-        <version>3.0.1-b09</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss</groupId>
-        <artifactId>jandex</artifactId>
-        <version>2.0.4.Final</version>
-        <type>jar</type>
-      </dependency>
       
       <dependency>
         <groupId>org.jboss.weld</groupId>
@@ -81,53 +43,71 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+      <dependency>
+        <groupId>org.microbean</groupId>
+        <artifactId>microbean-base-specification</artifactId>
+        <version>0.1.1</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.microbean</groupId>
+        <artifactId>microbean-weld-se-environment</artifactId>
+        <version>0.1.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+
+      <!-- Normal dependencies. -->
       
+      
+      <dependency>
+        <groupId>io.fabric8</groupId>
+        <artifactId>kubernetes-client</artifactId>
+        <version>3.1.8</version>
+        <type>jar</type>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>io.fabric8</groupId>
+        <artifactId>kubernetes-model</artifactId>
+        <version>2.0.8</version>
+        <type>jar</type>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-cdi</artifactId>
-        <version>0.3.0</version>
+        <version>0.3.3</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.microbean</groupId>
-        <artifactId>microbean-configuration</artifactId>
-        <version>0.2.1</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.microbean</groupId>
-        <artifactId>microbean-configuration-cdi</artifactId>
-        <version>0.2.0</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.microbean</groupId>
         <artifactId>microbean-kubernetes-client-cdi</artifactId>
-        <version>0.2.1</version>
+        <version>0.2.2</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-kubernetes-controller</artifactId>
-        <version>0.0.5</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>org.microbean</groupId>
-        <artifactId>microbean-main</artifactId>
-        <version>6</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>1.7.25</version>
+        <version>0.0.7</version>
         <type>jar</type>
       </dependency>
 
@@ -136,69 +116,23 @@
 
   <dependencies>
 
-    <!-- Compile-scoped dependencies. -->
+    <!-- Test-scoped dependencies. -->
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    
     <dependency>
       <groupId>org.microbean</groupId>
-      <artifactId>microbean-cdi</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
+      <artifactId>microbean-weld-se-environment</artifactId>
+      <type>pom</type>
+      <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-configuration-cdi</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>io.fabric8</groupId>
-      <artifactId>kubernetes-client</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-kubernetes-controller</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-    
-    <!-- Provided-scoped dependencies. -->
-
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>javax.enterprise</groupId>
-      <artifactId>cdi-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>javax.el-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-
-    
     <!-- Runtime-scoped dependencies. -->
-
-    <dependency>
-      <groupId>org.jboss</groupId>
-      <artifactId>jandex</artifactId>
-      <type>jar</type>
-      <scope>runtime</scope>
-      <optional>true</optional>
-    </dependency>
 
     <dependency>
       <groupId>org.microbean</groupId>
@@ -207,64 +141,49 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
-
     
-    <!-- Test-scoped dependencies. -->
-
+    <!-- Compile-scoped dependencies. -->
 
     <dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>javax.el</artifactId>
+      <groupId>io.fabric8</groupId>
+      <artifactId>kubernetes-client</artifactId>
       <type>jar</type>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>io.fabric8</groupId>
+      <artifactId>kubernetes-model</artifactId>
       <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jboss.weld.se</groupId>
-      <artifactId>weld-se-core</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.microbean</groupId>
-      <artifactId>microbean-configuration</artifactId>
+      <artifactId>microbean-cdi</artifactId>
       <type>jar</type>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
     
     <dependency>
       <groupId>org.microbean</groupId>
-      <artifactId>microbean-main</artifactId>
+      <artifactId>microbean-kubernetes-controller</artifactId>
       <type>jar</type>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
-    
+
+    <!-- Provided-scoped dependencies. -->
+
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
+      <groupId>org.microbean</groupId>
+      <artifactId>microbean-base-specification</artifactId>
+      <type>pom</type>
+      <scope>provided</scope>
     </dependency>
     
   </dependencies>
   
   <build>
-
-    <extensions>
-      <extension>
-        <groupId>kr.motd.maven</groupId>
-        <artifactId>os-maven-plugin</artifactId>
-        <version>1.5.0.Final</version>
-      </extension>
-    </extensions>
 
     <resources>
 
@@ -296,18 +215,13 @@
                 <location>${project.basedir}/src/main/javadoc/io.fabric8/kubernetes-client/3.1.8</location>
               </offlineLink>
               <offlineLink>
-                <url>http://static.javadoc.io/io.fabric8/kubernetes-model/2.0.4</url>
-                <location>${project.basedir}/src/main/javadoc/io.fabric8/kubernetes-model/2.0.4</location>
+                <url>http://static.javadoc.io/io.fabric8/kubernetes-model/2.0.8</url>
+                <location>${project.basedir}/src/main/javadoc/io.fabric8/kubernetes-model/2.0.8</location>
               </offlineLink>
             </offlineLinks>
           </configuration>
         </plugin>
         
-        <plugin>
-          <artifactId>maven-scm-plugin</artifactId>
-          <version>1.9.5</version>
-        </plugin>
-
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
@@ -366,7 +280,7 @@
 
     <!-- maven-javadoc-plugin properties; see https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html -->
     <doctitle>&lt;a href="${project.url}" target="_parent"&gt;${project.artifactId}&lt;/a&gt; ${project.version} &lt;a href="https://travis-ci.org/microbean/${project.artifactId}" target="_parent"&gt;&lt;img src="https://travis-ci.org/microbean/${project.artifactId}.svg?branch=master"&gt;&lt;/a&gt;</doctitle>
-    <links>http://docs.jboss.org/cdi/api/2.0/,https://microbean.github.io/microbean-cdi/apidocs/,https://microbean.github.io/microbean-kubernetes-controller/apidocs/,https://docs.oracle.com/javaee/7/api/,https://microbean.github.io/microbean-development-annotations/apidocs/,http://jcip.net/annotations/doc/</links>
+    <links>https://docs.jboss.org/cdi/api/2.0/,https://microbean.github.io/microbean-cdi/apidocs/,https://microbean.github.io/microbean-kubernetes-controller/apidocs/,https://docs.oracle.com/javaee/7/api/,https://microbean.github.io/microbean-development-annotations/apidocs/,http://jcip.net/annotations/doc/</links>
     
     <!-- maven-release-plugin properties; see http://maven.apache.org/maven-release/maven-release-plugin/perform-mojo.html -->
     <goals>deploy,site-deploy</goals>
