--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
       <dependency>
         <groupId>io.fabric8</groupId>
         <artifactId>kubernetes-client</artifactId>
-        <version>3.1.10</version>
+        <version>3.2.0</version>
         <type>jar</type>
         <exclusions>
           <exclusion>
@@ -80,7 +80,7 @@
       <dependency>
         <groupId>io.fabric8</groupId>
         <artifactId>kubernetes-model</artifactId>
-        <version>2.0.9</version>
+        <version>2.1.1</version>
         <type>jar</type>
         <exclusions>
           <exclusion>
@@ -209,16 +209,9 @@
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <configuration>
-            <offlineLinks>
-              <offlineLink>
-                <url>http://static.javadoc.io/io.fabric8/kubernetes-client/3.1.10</url>
-                <location>${project.basedir}/src/main/javadoc/io.fabric8/kubernetes-client/3.1.10</location>
-              </offlineLink>
-              <offlineLink>
-                <url>http://static.javadoc.io/io.fabric8/kubernetes-model/2.0.9</url>
-                <location>${project.basedir}/src/main/javadoc/io.fabric8/kubernetes-model/2.0.9</location>
-              </offlineLink>
-            </offlineLinks>
+            <additionalJOptions combine.children="append">
+              <additionalJOption>-J-Dhttp.agent=maven-javadoc-plugin</additionalJOption>
+            </additionalJOptions>
           </configuration>
         </plugin>
         
@@ -280,12 +273,15 @@
 
     <!-- maven-javadoc-plugin properties; see https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html -->
     <doctitle>&lt;a href="${project.url}" target="_parent"&gt;${project.artifactId}&lt;/a&gt; ${project.version} &lt;a href="https://travis-ci.org/microbean/${project.artifactId}" target="_parent"&gt;&lt;img src="https://travis-ci.org/microbean/${project.artifactId}.svg?branch=master"&gt;&lt;/a&gt;</doctitle>
-    <links>https://docs.jboss.org/cdi/api/2.0/,https://microbean.github.io/microbean-cdi/apidocs/,https://microbean.github.io/microbean-kubernetes-controller/apidocs/,https://docs.oracle.com/javaee/7/api/,https://microbean.github.io/microbean-development-annotations/apidocs/,http://jcip.net/annotations/doc/</links>
+    <links>http://static.javadoc.io/io.fabric8/kubernetes-client/3.2.0,http://static.javadoc.io/io.fabric8/kubernetes-model/2.1.1,https://docs.jboss.org/cdi/api/2.0/,https://microbean.github.io/microbean-cdi/apidocs/,https://microbean.github.io/microbean-kubernetes-controller/apidocs/,https://docs.oracle.com/javaee/7/api/,https://microbean.github.io/microbean-development-annotations/apidocs/,http://jcip.net/annotations/doc/</links>
     
     <!-- maven-release-plugin properties; see http://maven.apache.org/maven-release/maven-release-plugin/perform-mojo.html -->
     <goals>deploy,site-deploy</goals>
     <scmCommentPrefix>[maven-release-plugin] [skip ci]</scmCommentPrefix>
 
+    <!-- maven-site-plugin properties; https://maven.apache.org/plugins/maven-site-plugin/stage-mojo.html -->
+    <relativizeDecorationLinks>false</relativizeDecorationLinks>
+    
     <!-- maven-surefire-plugin properties; see http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html -->
     <trimStackTrace>false</trimStackTrace>
 
