--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -27,7 +27,7 @@ handlers= java.util.logging.ConsoleHandler
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
 .level= INFO
-org.microbean.level = FINER
+org.microbean.level = INFO
 
 ############################################################
 # Handler specific properties.
