--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.microbean</groupId>
   <artifactId>microbean-kubernetes-controller-cdi</artifactId>
-  <version>0.1.6-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.microbean</groupId>
@@ -149,7 +149,7 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-development-annotations</artifactId>
-        <version>0.1.3</version>
+        <version>0.2.1</version>
         <type>jar</type>
       </dependency>
       
@@ -170,7 +170,7 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-kubernetes-controller</artifactId>
-        <version>0.1.2</version>
+        <version>0.2.2</version>
         <type>jar</type>
       </dependency>
 
@@ -307,7 +307,12 @@
         <plugin>
           <groupId>org.owasp</groupId>
           <artifactId>dependency-check-maven</artifactId>
-          <version>3.2.1</version>                    
+          <version>3.2.1</version>
+          <configuration>
+            <failOnError>false</failOnError>
+            <name>National Vulnerability Database Report</name>
+            <suppressionFile>${basedir}/src/dependency-check/suppressions.xml</suppressionFile>
+          </configuration>
         </plugin>
 
       </plugins>
@@ -349,9 +354,6 @@
   </build>
 
   <properties>
-
-    <!-- dependency-check-plugin properties; see -->
-    <suppressionFile>${basedir}/src/dependency-check/suppressions.xml</suppressionFile>
 
     <!-- findbugs-maven-plugin properties; see http://gleclaire.github.io/findbugs-maven-plugin/findbugs-mojo.html -->
     <findbugs.effort>Max</findbugs.effort>
