Fixed #6; other minor changes
Signed-off-by: Laird Nelson <ljnelson@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -270,7 +270,7 @@
       
       <resource>
         <targetPath>META-INF</targetPath>
-        <directory />
+        <directory>${project.basedir}</directory>
         <includes>
           <include>LICENSE</include>
         </includes>
