--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
   <parent>
     <groupId>org.microbean</groupId>
     <artifactId>microbean-pluginmanagement-pom</artifactId>
-    <version>5</version>
+    <version>9</version>
+    <relativePath/>
   </parent>
 
   <name>microBean Kubernetes Controller CDI</name>
@@ -37,9 +38,25 @@
 
       
       <dependency>
+        <groupId>com.fasterxml.jackson</groupId>
+        <artifactId>jackson-bom</artifactId>
+        <version>2.9.8</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp-bom</artifactId>
+        <version>3.12.1</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      
+      <dependency>
         <groupId>org.jboss.weld</groupId>
         <artifactId>weld-core-bom</artifactId>
-        <version>3.0.4.Final</version>
+        <version>3.0.5.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -47,7 +64,7 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-base-specification</artifactId>
-        <version>0.4.2</version>
+        <version>0.4.5</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -55,7 +72,7 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-weld-se-environment</artifactId>
-        <version>0.4.2</version>
+        <version>0.5.3</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -67,56 +84,21 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>2.9.6</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>2.9.6</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.9.6</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>com.fasterxml.jackson.dataformat</groupId>
-        <artifactId>jackson-dataformat-yaml</artifactId>
-        <version>2.9.6</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
-        <groupId>com.fasterxml.jackson.module</groupId>
-        <artifactId>jackson-module-jaxb-annotations</artifactId>
-        <version>2.9.6</version>
+        <version>2.9.8</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>com.squareup.okhttp3</groupId>
         <artifactId>logging-interceptor</artifactId>
-        <version>3.10.0</version>
+        <version>3.12.1</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
-        <groupId>com.squareup.okhttp3</groupId>
-        <artifactId>okhttp</artifactId>
-        <version>3.10.0</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
         <groupId>io.fabric8</groupId>
         <artifactId>kubernetes-client</artifactId>
-        <version>3.2.0</version>
+        <version>4.1.1</version>
         <type>jar</type>
         <exclusions>
           <exclusion>
@@ -129,7 +111,7 @@
       <dependency>
         <groupId>io.fabric8</groupId>
         <artifactId>kubernetes-model</artifactId>
-        <version>2.1.1</version>
+        <version>4.1.1</version>
         <type>jar</type>
         <exclusions>
           <exclusion>
@@ -149,42 +131,35 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-development-annotations</artifactId>
-        <version>0.2.1</version>
+        <version>0.2.3</version>
         <type>jar</type>
       </dependency>
       
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-cdi</artifactId>
-        <version>0.4.1</version>
+        <version>0.4.3</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-kubernetes-client-cdi</artifactId>
-        <version>0.3.3</version>
+        <version>0.4.1</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-kubernetes-controller</artifactId>
-        <version>0.2.2</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>1.7.25</version>
+        <version>0.2.3-SNAPSHOT</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.yaml</groupId>
         <artifactId>snakeyaml</artifactId>
-        <version>1.21</version>
+        <version>1.23</version>
         <type>jar</type>
       </dependency>
       
@@ -218,6 +193,15 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
+
+    <!-- Provided-scoped dependencies. -->
+
+    <dependency>
+      <groupId>org.microbean</groupId>
+      <artifactId>microbean-base-specification</artifactId>
+      <type>pom</type>
+      <scope>provided</scope>
+    </dependency>
     
     <!-- Compile-scoped dependencies. -->
 
@@ -248,35 +232,10 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-
-    <!-- Provided-scoped dependencies. -->
-
-    <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-base-specification</artifactId>
-      <type>pom</type>
-      <scope>provided</scope>
-    </dependency>
     
   </dependencies>
   
   <build>
-
-    <resources>
-
-      <resource>
-        <directory>src/main/resources</directory>
-      </resource>
-      
-      <resource>
-        <targetPath>META-INF</targetPath>
-        <directory>${project.basedir}</directory>
-        <includes>
-          <include>LICENSE</include>
-        </includes>
-      </resource>
-
-    </resources>
 
     <testResources />
     
@@ -291,11 +250,10 @@
             </additionalJOptions>
           </configuration>
         </plugin>
-        
+
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>findbugs-maven-plugin</artifactId>
-          <version>3.0.4</version>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>3.0.0</version>
         </plugin>
         
         <plugin>
@@ -307,7 +265,7 @@
         <plugin>
           <groupId>org.owasp</groupId>
           <artifactId>dependency-check-maven</artifactId>
-          <version>3.2.1</version>
+          <version>4.0.2</version>
           <configuration>
             <failOnError>false</failOnError>
             <name>National Vulnerability Database Report</name>
@@ -355,28 +313,8 @@
 
   <properties>
 
-    <!-- findbugs-maven-plugin properties; see http://gleclaire.github.io/findbugs-maven-plugin/findbugs-mojo.html -->
-    <findbugs.effort>Max</findbugs.effort>
-    <findbugs.excludeFilterFile>src/findbugs/exclude.xml</findbugs.excludeFilterFile>
-    <findbugs.threshold>Medium</findbugs.threshold>
-
     <!-- maven-javadoc-plugin properties; see https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html -->
-    <doctitle>&lt;a href="${project.url}" target="_parent"&gt;&lt;span style="font-family:Lobster, cursive;"&gt;µb&lt;/span&gt; ${project.artifactId}&lt;/a&gt; ${project.version} &lt;a href="https://travis-ci.org/microbean/${project.artifactId}" target="_parent"&gt;&lt;img src="https://travis-ci.org/microbean/${project.artifactId}.svg?branch=master"&gt;&lt;/a&gt;</doctitle>
-    <links>http://static.javadoc.io/io.fabric8/kubernetes-client/3.2.0,http://static.javadoc.io/io.fabric8/kubernetes-model/2.1.1,https://docs.jboss.org/cdi/api/2.0/,https://microbean.github.io/microbean-cdi/apidocs/,https://microbean.github.io/microbean-kubernetes-controller/apidocs/,https://docs.oracle.com/javaee/7/api/,https://microbean.github.io/microbean-development-annotations/apidocs/,http://jcip.net/annotations/doc/</links>
-    <stylesheetfile>css/stylesheet.css</stylesheetfile>
-
-    <!-- maven-project-info-reports-plugin properties; see https://maven.apache.org/plugins/maven-project-info-reports-plugin/ -->
-    <dependency.locations.enabled>false</dependency.locations.enabled>
-    
-    <!-- maven-release-plugin properties; see http://maven.apache.org/maven-release/maven-release-plugin/perform-mojo.html -->
-    <goals>deploy,site-deploy</goals>
-    <scmCommentPrefix>[maven-release-plugin] [skip ci]</scmCommentPrefix>
-
-    <!-- maven-site-plugin properties; https://maven.apache.org/plugins/maven-site-plugin/stage-mojo.html -->
-    <relativizeDecorationLinks>false</relativizeDecorationLinks>
-    
-    <!-- maven-surefire-plugin properties; see http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html -->
-    <trimStackTrace>false</trimStackTrace>
+    <links>http://static.javadoc.io/io.fabric8/kubernetes-client/4.1.1,http://static.javadoc.io/io.fabric8/kubernetes-model/4.1.1,https://docs.jboss.org/cdi/api/2.0/,https://microbean.github.io/microbean-cdi/apidocs/,https://microbean.github.io/microbean-kubernetes-controller/apidocs/,https://docs.oracle.com/javaee/7/api/,https://microbean.github.io/microbean-development-annotations/apidocs/,http://jcip.net/annotations/doc/</links>
 
     <skipClusterTests>true</skipClusterTests>
 
@@ -389,10 +327,14 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>javadoc-no-fork</report>
+              <report>test-javadoc-no-fork</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
       <plugin>
         <groupId>org.owasp</groupId>
